# rustPractises

./: .gitignore  IDEAS.md  README.md
1/: main
2/: Killer.pas
guessing_game/src/: main.rs
killer/: Cargo.toml
killer/src/: main.rs
killer_gui/: Cargo.toml  README.md  index.htm  index.html
killer_gui/src/: main.rs
numbers/: 1  1.rs
textova_grafika/: Cargo.toml
textova_grafika/src/: ctverec.rs  kosoctverec.rs  main.rs  sachovnice1.rs  trojuhelnik.rs
titr/: AGENTS.md  Cargo.toml  README.md  TODO.md
titr/src/: file.rs  gui_headline.rs  main.rs  report.rs  task.rs  task_clear.rs  task_minute.rs  task_pause.rs  task_start.rs  task_stop.rs  task_today.rs
track/: README.md
traversytut/: Cargo.toml
traversytut/src/: README.md  arrays.rs  cli.rs  conditionals.rs  functions.rs  loops.rs  pointer_ref.rs  print.rs  strings.rs  structs.rs  tuples.rs  types.rs  vars.rs  vectors.rs
ulohy-cisla/: Cargo.toml
ulohy-cisla/src/: cela_cast_odmocniny_z_n.rs  ciferny_soucet.rs  cislo_pozpatku.rs  faktorial_cisla.rs  main.rs  pocet_jednicek.rs  soucet_prvnich_n_prirozenych_cisel.rs
wasm-counter/: Cargo.toml  README.md  index.html  index.js
wasm-counter/src/: lib.rs
wasmmovement/: Cargo.toml  LICENSE_MIT  index.html
wasmmovement/pkg/: package.json  wasmmovement.d.ts  wasmmovement.js  wasmmovement_bg.wasm  wasmmovement_bg.wasm.d.ts
wasmmovement/src/: lib.rs
