[package]
name = "killer_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", features = ["glow"] }
egui = "0.27"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

#[lib]
#crate-type = ["cdylib"]
# Pro jednoduchost: necháme pouze binární crate. Trunk zvládne sestavit `main.rs`.

[package.metadata.bundle]
name = "Killer GUI"
identifier = "cz.pikl.killer.gui"
version = "0.1.0"
copyright = "Jan Pikl"
category = "Game"
